<resources>
    <string name="app_name">My Wallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_id_number">ID number</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_no">Phone No.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="id_number">ID Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="finance_fragment">Finance Fragment</string>
    <string name="logout">Logout</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="balance">Balance</string>
    <string name="my_balance">balance</string>
    <string name="transactions">Transactions</string>
    <string name="bill">Bill</string>
    <string name="action_transactions">Transactions</string>
    <string name="action_clear_transactions">Clear Transactions</string>
    <string name="enter_amount_you_want_to_deposit">Enter amount you want to deposit :</string>
    <string name="send_receive_money">Send/Receive\n money</string>
    <string name="send_money">Send Money</string>
    <string name="send_money_to">Send money to :</string>
    <string name="amount">Amount</string>
    <string name="enter_name">Enter name</string>
    <string name="amount_s">Amount :</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="enter_amount_you_want_to_receive">Enter amount you want to receive</string>
    <string name="receive_from">Receive From</string>
    <string name="label_active">my_balance</string>
    <string name="label_completed">transactions</string>
    <string name="transaction">transaction</string>
    <string name="unknown">Unknown</string>
    <string name="origin_provider_label">OriginProviderName</string>
    <string name="destination_provider_label">DestinationProviderName</string>
    <string name="money_transfer_mode_label">MoneyTransferMode</string>
    <string name="currency">currency</string>
    <string name="transfer_mode">transferMode</string>
    <string name="money_transfer_origin_name">moneyTransferOriginName</string>
    <string name="money_transfer_destination_name">moneyTransferDestinationName</string>
    <string name="money_transfer_origin_provider_name">moneyTransferOriginProvidername</string>
    <string name="money_transfer_destination_provider_name">moneyTransferDestinationProvidername</string>
    <string name="value">value</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="title_transactions">Transactions:</string>
    <string name="reset_account">Reset account</string>
    <string name="take_photo">Take photo</string>
    <string name="take_picture">Take picture</string>
    <string name="national_id_passport">National ID/ Passport</string>
    <string name="account_number_optional_if_wallet">Account Number (Optional if Wallet)</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="look_up">Look up</string>
    <string name="welcome_note">Select one of the options below to let us know if you bank with us</string>
    <string name="search_account">We are looking for your account...</string>
    <string name="activate_account">We have found an account with the details you provided. Would you like to activate Mobile banking for your account?</string>
    <string name="account_found">Account successfully found!</string>
    <string name="mb_activation_title">Perfect! Lets get started with your Mobile Banking account activation process</string>
    <string name="mb_activation_desc">You will be required to provide your personal details for us to activate your account</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="activate">Activate</string>
    <string name="request_a_new_code">Request a new code</string>
    <string name="fingerprint">FingerPrint</string>
</resources>