<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/billsFragment"
        android:icon="@drawable/ic_arrow_upward"
        android:iconTint="@android:color/holo_red_dark"
        android:orderInCategory="30"
        android:title="@string/withdraw"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/serviceTransferFragment"
        android:icon="@drawable/ic_arrow_downward"
        android:orderInCategory="10"
        android:title="@string/send_receive_money"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/ic_transaction_arrows"
        android:orderInCategory="20"
        android:title="@string/action_transactions"
        app:showAsAction="ifRoom" />
</menu>