<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt_receive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/enter_amount_you_want_to_receive"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/txt_receiveFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/receive_from"
            app:layout_constraintTop_toBottomOf="@id/txt_receive" />


        <EditText
            android:id="@+id/ediText_receive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:hint="Receive from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_receiveFrom" />

        <TextView
            android:id="@+id/txt_receiveAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:layout_marginTop="20dp"
            android:text="Receive amount"
            app:layout_constraintTop_toBottomOf="@id/ediText_receive" />

        <EditText
            android:id="@+id/ediText_receiveAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:layout_marginStart="16dp"
            android:hint="Receive amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_receiveAmount" />

        <Button
            android:id="@+id/btn_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ediText_receiveAmount" />

        <TextView
            android:id="@+id/txt_sendTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/send_money"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_receive" />

        <TextView
            android:id="@+id/txt_sendTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send_money_to"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_sendTitle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/ediText_sendTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_sendTo" />

        <TextView
            android:id="@+id/txt_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/amount_s"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ediText_sendTo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:id="@+id/ediText_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_send" />


        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ediText_amount" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>