<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature_wallet.presentation.auth.onboarding.account_lookup.AccountLookupFragment">

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Hello! Welcome to eclectics Mobile Banking app"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_title_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_below="@id/txt_title"
            android:layout_marginBottom="20dp"
            android:text="Please provide your data below so tha we can set your eclectics account details"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/linear_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_below="@id/txt_title_desc"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_PhoneNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Phone Number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputEt_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_id_passport"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/national_id_passport">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputEt_id_passport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_accountNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_number_optional_if_wallet">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputEt_accountNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_lookup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:id="@+id/linear_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkbox_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/txt_agreement"
                    android:layout_width="wrap_content"
                    android:text="@string/i_agree_to_the_terms_and_conditions"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_lookup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/look_up"/>
        </LinearLayout>
    </RelativeLayout>
</layout>